--- a/src/main/resources/templates/custom-filtration.html
+++ b/src/main/resources/templates/custom-filtration.html
@@ -3,7 +3,7 @@
 xmlns:th="http://www.thymleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>International Phone-Number Validation</title>
+    <title>Custom Filtration</title>
     <link rel="icon" th:href="@{/filter.png}" type="image/x-icon" >
     <!--    <link rel="stylesheet" th:href="@{/filtration.css}" />-->
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
